--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Мой сайт с музыкой</title>
 </head>
 <body>
-  <h1>Привет, друзья!</h1>
+  <h1>дарова бандиты</h1>
   <button onclick="document.getElementById('my-audio').play()">▶️ Воспроизвести музыку</button>
 
   <audio id="my-audio" src="music.mp3"></audio>
