--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Мой сайт с музыкой</title>
+  <title>немой сайт с музыкой</title>
 </head>
 <body>
   <h1>дарова бандиты</h1>
